# UltraShooter

./: .gitignore  CMakeLists.txt  FindSFML.cmake  README.md  Ultra_Shooter_design.odt  config
1/: Anim.cpp  Anim.hpp  Bullet.cpp  Bullet.h  Ennemi.cpp  Ennemi.h  Entity.cpp  Entity.hpp  EntityWithWeapon.cpp  EntityWithWeapon.hpp  Exception.hpp  GameEngine.cpp  GameEngine.hpp  GlobalFunction.cpp  GlobalFunction.h  HUD.cpp  HUD.hpp  ImageManager.cpp  ImageManager.hpp  Layer.cpp  Layer.hpp  LayerAnim.cpp  LayerAnim.hpp  PausableClock.hpp  Player.cpp  Player.hpp  PreHeader.h  Projectile.cpp  Projectile.h  main.cpp
config/: config
include/: AutomaticWeapon.hpp  Bonus.hpp  Bullet.hpp  Button.hpp  Caisse.h  CheckBox.hpp  CollisionManager.hpp  Config.h  CustomSound.hpp  Engine.hpp  Ennemy.hpp  EnnemyFactory.hpp  Entity.hpp  EntityWithWeapon.hpp  Events.hpp  Explosive.hpp  Game.hpp  GameEnded.hpp  GlobalFunctions.h  Hud.h  Hud.hpp  LaserBeam.hpp  LaserWeapon.hpp  LoadFiles.hpp  Map.hpp  Menu.hpp  MissileLauncher.hpp  MultiplayerGame.hpp  MusicManager.hpp  Obstacle.hpp  Player.hpp  Projectile.hpp  Raider.hpp  ShrapnelWeapon.hpp  SoloGame.hpp  Splitter.hpp  TextField.hpp  TextureManager.h  Wave.hpp  Weapon.hpp  (+5 more)
src/: AutomaticWeapon.cpp  Bonus.cpp  Bullet.cpp  Button.cpp  Caisse.cpp  CheckBox.cpp  CollisionManager.cpp  Config.cpp  CustomSound.cpp  Engine.cpp  Ennemy.cpp  EnnemyFactory.cpp  Entity.cpp  EntityWithWeapon.cpp  Events.cpp  Game.cpp  GameEnded.cpp  Hud.cpp  LaserBeam.cpp  LaserWeapon.cpp  LoadFiles.cpp  Map.cpp  Menu.cpp  MissileLauncher.cpp  MultiplayerGame.cpp  (+22 more)
(+3 files in other folders)
